# sleipnir

./: .gitignore  Cargo.toml  README.md  precommit.sh
.github/workflows/: rust.yml
benches/: benchmarks.rs  sleipnir.rs
examples/: tosvg.rs
resources/testdata/: README.md  caveat.ttx  mail.kt  mail.xml  mail_viewBox.xml  nabla.ttx
src/: cmp.rs  diff.rs  draw_commands.rs  draw_glyph.rs  error.rs  glyf.rs  icon2kt.rs  icon2png.rs  icon2svg.rs  icon2symbol.rs  icon2xml.rs  iconid.rs  lib.rs  ligature.rs  ligatures.rs  measure.rs  pathstyle.rs  pens.rs  svg_font.rs  test_utils.rs  text2png.rs  xml_element.rs
