[package]
name = "sleipnir"
version = "0.2.14"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Memory safe font operations for Google Fonts."
repository = "https://github.com/googlefonts/sleipnir"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
kurbo = "0.11.1"
skrifa = "0.35.0"
smol_str = "0.3.2"
smallvec = "1.14"
thiserror = "1.0.69"
rayon = "1.10.0"
harfrust = "0.1.2"
png = "0.17.16"
tiny-skia = "0.11.4"
roxmltree = "0.20"
regex = "1"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pretty_assertions="1.4"
regex = "1.10.4"
write-fonts = "0.41.0"
