[package]
name = "sleipnir"
version = "0.2.14"
edition = "2021"
license = "MIT/Apache-2.0"
description = "Memory safe font operations for Google Fonts."
repository = "https://github.com/googlefonts/sleipnir"
readme = "README.md"
categories = ["text-processing", "parsing", "graphics"]

[features]

[dependencies]
harfrust = "0.5.0"
kurbo = "0.13.0"
png = "0.18.0"
rayon = "1.10.0"
regex = "1"
roxmltree = "0.20"
skrifa = { version="0.40.0", features = ["traversal"] }
smallvec = "1.14"
smol_str = "0.3.2"
thiserror = "1.0.69"
tiny-skia = "0.12.0"

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
pretty_assertions="1.4"
regex = "1.10.4"
write-fonts = "0.45.0"
criterion = "0.7"

[[bench]]
name = "benchmarks"
harness = false
